# Tavern

./: .dockerignore  .gitignore  LIVE_ROOM_README.md  README.md  main_live_api.py  pyproject.toml  start-vimax.ps1
agent_runtime/: __init__.py  agent_company.py  config.py  heygen_skills.py  live_room_models.py  live_room_runtime.py  llm.py  loop.py  production_adapters.py  production_store.py  prompts.py  session_index.py  speech_tts.py  tools.py  vimax_adapters.py
agents/: __init__.py  visual_director.py
assets/: README.md
components/: README.md
configs/: agent.example.yaml  agent.local.yaml  idea2video.yaml  idea2video_minimax.yaml  script2video.yaml  script2video_minimax.yaml
interfaces/: __init__.py  production.py
legacy/: README.md
plugins/: README.md
prompts/: agent.md  workflow.md
services/: README.md
shared/: README.md
tests/: test_agent_company.py  test_agent_config.py  test_async_tasks.py  test_ffmpeg_cli.py  test_heygen_generator.py  test_heygen_skills.py  test_live_room_runtime.py  test_media_generation.py  test_minimax_integration.py  test_model_gateway.py  test_n8n_workflow_asset.py  test_plugin_system.py  test_production_adapters.py  test_production_models.py  test_production_store.py  test_robustness.py  test_runtime_contract.py  test_visual_director.py  test_workbench_api.py
tools/: __init__.py  digital_human_generator_heygen_api.py  video_generator_veo_google_api.py
utils/: ffmpeg_cli.py  image.py  provider_presets.py
web/: index.html  package-lock.json  package.json
workers/: README.md
workflows/: README.md
(+120 files in other folders)
