[project]
name = "tavern-liveos"
version = "0.2.0"
description = "AI Digital Live Commerce Operating System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "anthropic>=0.92.0",
    "chardet>=5.2.0",
    "edge-tts>=7.2.8",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.138.0",
    "google-genai>=1.47.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "moviepy>=2.2.1",
    "openai>=1.95.0",
    "opencv-python",
    "pillow>=11.3.0",
    "pywin32>=312; sys_platform == 'win32'",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scenedetect[opencv]>=0.6.7.1",
    "tenacity>=9.1.2",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]



[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8",
]
